--- a/style.css
+++ b/style.css
@@ -11,98 +11,97 @@
 }
 
 body {
-  background-color: #f9fbfc;
+  background-color: var(--page-background);
   width: auto;
   height: auto;
 }
 
+body, input, textarea, button {
+  font-family: 'Open Sans', sans-serif;
+}
+
 .top {
-  width: auto;
   height: 450px;
-  background-color: #1d539e;
-  position: relative;
+  background-color: var(--blue);
 }
 
 .top .text {
-  position: absolute;
-  margin: 80px 0 0 444px;
+  text-align: center;
+  padding-top: 80px;
 }
 
 .top .text h1 {
-  text-align: center;
   color: #ffffff;
   font-weight: bold;
   font-size: 48px;
-  font-family: Open Sans;
 }
 
 .top .text p {
-  font-family: Open Sans;
   font-weight: lighter;
   font-size: 18px;
-  text-align: center;
   color: #ffffff;
   padding: 10px;
 }
-.card-1 {
-  position: relative;
-  width: 355px;
-  height: 470px;
-  background-color: #ffffff;
-  margin: -130px 0 0 167px;
-  font-family: Open Sans;
-  border-radius: 0.5rem;
-  box-shadow: 0px 3px 5px #a1a8ab;
+
+.cards-container {
+  max-width: 1240px;
+  margin: -100px auto 0;
+  display: flex;
+  gap: 20px;
+  padding: 0 20px;
 }
 
-.card-1 p {
-  width: 51px;
-  height: 25px;
-  color: #828799;
-  font-size: 18px;
+.card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  flex: 1;
+  min-height: 350px;
+  background-color: #ffffff;
+  border-radius: 0.5rem;
+  box-shadow: 0px 3px 5px var(--gray);
   padding: 20px;
 }
 
-.card-1 p:first-child {
+.card .plan-name {
   color: #1e2338;
   font-weight: bolder;
 }
 
-.card-1 .item-1,
-.dashed {
-  margin-left: 20px;
+.card .price {
+  font-size: 36px;
+  color: #1e2338;
 }
 
-.card-1 .dashed {
-  margin-top: 0px;
+.card .price span {
+  font-size: 18px;
 }
 
-.card-1 .item-2 {
-  width: fit-content;
-  font-size: 14px;
+.card .price span:last-child {
+  color: var(--gray);
+  font-weight: 300;
 }
 
-.card-1 ul li {
-  color: #828799;
+.card main ul li {
+  color: var(--gray);
   list-style: none;
-  margin-left: 20px;
+  padding-left: 20px;
   margin-top: 10px;
   display: flex;
   gap: 4px;
 }
 
-.card-1 button {
-  width: 296px;
+.card button {
+  width: 100%;
   height: 49px;
-  margin: 120px 0 0 20px;
   border-radius: 00.5rem;
-  color: #1d539e;
+  color: var(--blue);
   font-size: 18px;
   font-weight: bold;
-  border: 2px solid #1d539e;
+  border: 2px solid var(--blue);
   cursor: pointer;
 }
 
-.card-1 button:hover {
-  background-color: #ffcc29;
+.card button:hover {
+  background-color: var(--yellow);
 }
