--- a/style.css
+++ b/style.css
@@ -16,8 +16,11 @@ body {
   height: auto;
 }
 
-body, input, textarea, button {
-  font-family: 'Open Sans', sans-serif;
+body,
+input,
+textarea,
+button {
+  font-family: "Open Sans", sans-serif;
 }
 
 .top {
@@ -61,6 +64,18 @@ body, input, textarea, button {
   border-radius: 0.5rem;
   box-shadow: 0px 3px 5px var(--gray);
   padding: 20px;
+}
+
+.card .pop {
+  height: 76px;
+  background-color: var(--yellow);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  flex: 1;
+  border-radius: 1.5rem;
+  padding: 0px 11px;
 }
 
 .card .plan-name {
